--- a/templates/generateStep2.html
+++ b/templates/generateStep2.html
@@ -588,7 +588,7 @@
       debug.innerText=JSON.stringify(roomDict);
       createRoomElements(initRoomDistribution);
       document.getElementById("defaultOpen").click();
-      /*
+      
       // Send to backend
       fetch('/receive_schedule', {
         method: 'POST',
@@ -599,7 +599,7 @@
       })
       .then(res => res.json())
       .then(data => console.log("Success:", data))
-      .catch(err => console.error("Error sending schedule:", err));*/
+      .catch(err => console.error("Error sending schedule:", err));
     }
   </script>
 </body>
