--- a/templates/generateStep2.html
+++ b/templates/generateStep2.html
@@ -590,7 +590,7 @@
       document.getElementById("defaultOpen").click();
       
       // Send to backend
-      fetch('/receive_schedule', {
+      fetch('/final_distribution', {
         method: 'POST',
         headers: {
           'Content-Type': 'application/json'
