--- a/templates/generateStep2.html
+++ b/templates/generateStep2.html
@@ -600,6 +600,7 @@
       .then(res => res.json())
       .then(data => console.log("Success:", data))
       .catch(err => console.error("Error sending schedule:", err));
+      window.location.href = "/4";
     }
   </script>
 </body>
