--- a/templates/index.html
+++ b/templates/index.html
@@ -70,7 +70,14 @@
     p {
         font-size: 22px;
     }
+
+.columnsnumbers {
+font-size: 22px; 
+font-family: Times New Roman;
+width:20px;
+}
     </style>
+
 </head>
 <body style="margin: 20px;">
     <h1 style="color:white; background-color:#B51111; text-align: center;">SMCS Symposium Schedule Generator</h1>
@@ -85,15 +92,15 @@
     <h2 style="color:#B51111">Columns</h2>
     <p>Number of column containing...</p>
     <form id="columnForm1" class="container" id="columnForm" style="font-size: 22px;">
-        <p>Last name</p> <input type="number" id="lastName" style="font-size: 22px; font-family: Times New Roman;" class="columnnumbers" placeholder="1">
-        <p>First name</p> <input type="number" id="firstName" style="font-size: 22px; font-family: Times New Roman;" class="columnnumbers" placeholder="2">
-        <p>Name of project</p> <input type="number" id="projectName" style="font-size: 22px; font-family: Times New Roman;" class="columnnumbers" placeholder="3">
-        <p>Project topic</p> <input type="number" id="projectTopic" style="font-size: 22px; font-family: Times New Roman;" class="columnnumbers" placeholder="4">
+        <p>Last name</p> <input type="number" id="lastName" style="font-size: 22px; font-family: Times New Roman;" class="columnnumbers" placeholder="1">3</input>
+        <p>First name</p> <input type="number" id="firstName" style="font-size: 22px; font-family: Times New Roman;" class="columnnumbers" placeholder="2">4</input>
+        <p>Name of project</p> <input type="number" id="projectName" style="font-size: 22px; font-family: Times New Roman;" class="columnnumbers" placeholder="3">5</input>
+        <p>Project topic</p> <input type="number" id="projectTopic" style="font-size: 22px; font-family: Times New Roman;" class="columnnumbers" placeholder="4">6</input>
     </form>
     <form id="columnForm2" class="container" id="columnForm" style="font-size: 22px;">
-        <p>Availability</p> <input type="number" id="availability" style="font-size: 22px; font-family: Times New Roman;" class="columnnumbers" placeholder="5">
-        <p>Presenting with friend(s)</p> <input type="number" id="friends" style="font-size: 22px; font-family: Times New Roman;" class="columnnumbers" placeholder="6">
-        <p>Blurb about project</p> <input type="number" id="blurb" style="font-size: 22px; font-family: Times New Roman;" class="columnnumbers" placeholder="7">
+        <p>Availability</p> <input type="number" id="availability" style="font-size: 22px; font-family: Times New Roman;" class="columnnumbers" placeholder="5">7</input>
+        <p>Presenting with friend(s)</p> <input type="number" id="friends" style="font-size: 22px; font-family: Times New Roman;" class="columnnumbers" placeholder="6">15</input>
+        <p>Blurb about project</p> <input type="number" id="blurb" style="font-size: 22px; font-family: Times New Roman;" class="columnnumbers" placeholder="7">18</input>
     </form>
 
     <br>
