--- a/templates/index.html
+++ b/templates/index.html
@@ -152,7 +152,7 @@ PD 6, Thursday, December 21st</textarea>
             console.log("its being fricig called");
             button.disabled = !(input0 && input1 && input2 && input3 && input4 && input5 && input6 && input7 && input8 && input9);
         }
-
+	checkInputs();
         // Attach event listeners to inputs
         /*document.getElementById("lastName").addEventListener("input", checkInputs);
         document.getElementById("firstName").addEventListener("input", checkInputs);
