--- a/templates/generateschedule1.html
+++ b/templates/generateschedule1.html
@@ -91,7 +91,7 @@
       font-size: 22px;
       font-weight: bold;
       padding: 20px;
-      width: 500px;
+      width: 300;
       border: none;
       cursor: pointer;
     }
