--- a/templates/index.html
+++ b/templates/index.html
@@ -238,6 +238,7 @@ PD 6, Thursday, December 21st</textarea>
 			document.getElementById("nextPage").disabled=true;
 		}
 		else {
+			document.getElementById("troubleshoot").style.display="none";
 			document.getElementById("nextPage").disabled=false;
 		}
 		displayTable();
