--- a/templates/index.html
+++ b/templates/index.html
@@ -117,7 +117,7 @@ Room 199</textarea>
     <br>
     Days are separated by a single empty line.
     </p>
-    <textarea id="timesInput" style="width:400px; font-size: 22px; font-family: Times New Roman;" rows="15">PD 2, Tuesday, December 19th
+    <textarea id="timesInput" style="width:400px; font-size: 22px; font-family: Times New Roman;" rows="15">PD 2 Tuesday, December 19th
 PD 3, Tuesday, December 19th
 PD 4, Tuesday, December 19th
 PD 5, Tuesday, December 19th
