--- a/templates/index.html
+++ b/templates/index.html
@@ -117,7 +117,7 @@ Room 199</textarea>
     <br>
     Days are separated by a single empty line.
     </p>
-    <textarea id="timesInput" style="width:400px; font-size: 22px; font-family: Times New Roman;" rows="15">PD 2 Tuesday, December 19th
+    <textarea id="timesInput" style="width:400px; font-size: 22px; font-family: Times New Roman;" rows="15">PD 2, Tuesday, December 19th
 PD 3, Tuesday, December 19th
 PD 4, Tuesday, December 19th
 PD 5, Tuesday, December 19th
@@ -281,7 +281,7 @@ PD 6, Thursday, December 21st</textarea>
 	    
   function showParsedData() {
      /* allRooms = ["Room 195", "Room 198", "Room 199"]
-      displayAllTimes = [['PD 2 Tuesday, December 19th', 1], ['PD 3, Tuesday, December 19th', 1], ['PD 4, Tuesday, December 19th', 1], ['PD 5, Tuesday, December 19th', 1], ['PD 6, Tuesday, December 19th', 1], ['PD 2, Thursday, December 21st', 1], ['PD 3, Thursday, December 21st', 1], ['PD 4, Thursday, December 21st', 1], ['PD 5, Thursday, December 21st', 1], ['PD 6, Thursday, December 21st', 1]]
+      displayAllTimes = [['PD 2, Tuesday, December 19th', 1], ['PD 3, Tuesday, December 19th', 1], ['PD 4, Tuesday, December 19th', 1], ['PD 5, Tuesday, December 19th', 1], ['PD 6, Tuesday, December 19th', 1], ['PD 2, Thursday, December 21st', 1], ['PD 3, Thursday, December 21st', 1], ['PD 4, Thursday, December 21st', 1], ['PD 5, Thursday, December 21st', 1], ['PD 6, Thursday, December 21st', 1]]
 
       displayAllTimesFromData = [['PD 6, Thursday, December 21st', 1], ['PD 6, Tuesday, December 19th', 1], ['PD 3, Tuesday, December 19th', 1], ['PD 5, Tuesday, December 19th', 1], ['PD 4, Tuesday, December 19th', 1], ['PD 4, Thursday, December 21st', 1], ['PD 3, Thursday, December 21st', 1], ['PD 2, Thursday, December 21st', 1], ['PD 2 Tuesday, December 19th', 1], ['PD 5, Thursday, December 21st', 1]]
 
